fix horizontal scroll

--- a/app.css
+++ b/app.css
@@ -5,7 +5,7 @@ body{
 
 }
 input{
-  width:60%;
+  width:80%;
   font-family:assistant;
   font-size:0.8em;
   color:#7A3FFE;
@@ -39,15 +39,15 @@ input{
 #online:hover{
   background:yellow;
   color:#7A3FFE;
- 
+
 }
 #offline:hover{
   background:#FF5252;
 }
 .container{
 /*   background:#ECE3FE; */
-  
-  width:50%;
+
+  width:90%;
   margin:3% auto;
   margin-bottom:0;
   box-shadow:-2px 2px 10px 3px #c4b8d3;
@@ -55,7 +55,7 @@ input{
 /*   flex-wrap:wrap; */
   justify-content:center;
   font-size:1.3em;
-  
+
 }
 
 h1{
@@ -76,7 +76,7 @@ h1{
   padding:5px;
 /*   width:50px; */
 /* background:black; */
-  
+
 }
 .tv{
   display:flex;
@@ -86,15 +86,15 @@ h1{
 ul{
   list-style:none;
   padding:0;
-  
+
   margin:5px;
- 
+
 }
 ul li{
-  
-  
+
+
   background:#7A3FFE;
-  
+
   border:2px solid #ece3fe;
   padding:15px;
   display:flex;
@@ -117,7 +117,7 @@ a{
   color:#fff;
   text-decoration:none;
   text-transform:capitalize;
-  
+
 }
 /* .base{
 
@@ -131,12 +131,12 @@ clip-path: polygon(26% 63%, 76% 63%, 100% 100%, 0% 100%);
 text-align:center;
   margin:0 auto;
 
-  
+
 } */
 
 @media (max-width:900px){
   .container{
-    width:85%;
+    width:95%;
     flex-wrap:wrap;
   }
   ul{
@@ -149,7 +149,7 @@ text-align:center;
   .buttons{
     flex-direction:row;
 
-    
+
   }
 
 }
